Include admission letters in admission roadmaps
